--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/node": "^14.0.22",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "@types/react-is": "^16.7.1",
     "@types/shallowequal": "^1.1.1",
     "eslint": "^7.4.0",
     "eslint-config-airbnb": "^18.2.0",
