--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@stardust-ui/react-component-ref": "^0.40.0",
     "classnames": "^2.2.6",
     "keyboard-key": "^1.1.0",
-    "lodash-es": "^4.17.15",
+    "lodash": "^4.17.19",
     "prop-types": "^15.7.2",
     "react-is": "^16.13.1",
     "react-popper": "^2.2.3",
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.157",
-    "@types/node": "^14.0.22",
+    "@types/node": "^14.0.23",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-is": "^16.7.1",
@@ -51,7 +51,7 @@
     "semantic-ui-css": "^2.4.1",
     "tslint": "^6.1.2",
     "tslint-config-airbnb": "^5.11.2",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.7"
   },
   "peerDependencies": {
     "react": "^16.13.1",
