--- a/package.json
+++ b/package.json
@@ -43,9 +43,15 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-is": "^16.7.1",
     "@types/shallowequal": "^1.1.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-shallow-equal": "^1.0.1",
     "eslint": "^7.4.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-react": "^7.20.3",
+    "jest": "^26.1.0",
+    "jest-environment-enzyme": "^7.1.2",
+    "jest-enzyme": "^7.1.2",
     "lint-staged": "^10.2.11",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
