--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-is": "^16.7.1",
     "@types/shallowequal": "^1.1.1",
+    "@wessberg/rollup-plugin-ts": "^1.2.28",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-shallow-equal": "^1.0.1",
