--- a/package.json
+++ b/package.json
@@ -25,18 +25,19 @@
   "homepage": "https://github.com/Semantic-Org/Semantic-UI-React#readme",
   "dependencies": {
     "@popperjs/core": "^2.4.4",
-    "@semantic-ui-react/event-stack": "^3.1.1",
-    "@stardust-ui/react-component-event-listener": "~0.40.0",
-    "@stardust-ui/react-component-ref": "^0.40.0",
-    "classnames": "^2.2.6",
     "keyboard-key": "^1.1.0",
-    "lodash": "^4.17.19",
-    "prop-types": "^15.7.2",
     "react-is": "^16.13.1",
     "react-popper": "^2.2.3",
     "shallowequal": "^1.1.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.10.5",
+    "@babel/plugin-syntax-jsx": "^7.10.4",
+    "@babel/plugin-transform-react-jsx": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@rollup/plugin-commonjs": "^14.0.0",
+    "@rollup/plugin-replace": "^2.3.3",
     "@types/lodash": "^4.14.157",
     "@types/node": "^14.0.23",
     "@types/react": "^16.9.43",
@@ -54,8 +55,12 @@
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
     "lint-staged": "^10.2.11",
+    "lodash": "^4.17.19",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "rollup": "^2.22.1",
+    "rollup-plugin-progress": "^1.1.2",
     "semantic-ui-css": "^2.4.1",
     "tslint": "^6.1.2",
     "tslint-config-airbnb": "^5.11.2",
