--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
   "devDependencies": {
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.10.5",
+    "@babel/plugin-proposal-export-default-from": "^7.10.4",
     "@babel/plugin-syntax-jsx": "^7.10.4",
     "@babel/plugin-transform-react-jsx": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
+    "@rollup/plugin-babel": "^5.1.0",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-replace": "^2.3.3",
     "@types/lodash": "^4.14.157",
@@ -45,6 +47,8 @@
     "@types/react-is": "^16.7.1",
     "@types/shallowequal": "^1.1.1",
     "@wessberg/rollup-plugin-ts": "^1.2.28",
+    "babel-plugin-lodash": "^3.3.4",
+    "babel-plugin-transform-react-handled-props": "^2.1.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-shallow-equal": "^1.0.1",
