--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "test": "jest",
-    "test:Image": "npm run clear  && npx jest test/Breadcrumb.test.js",
+    "test:Image": "npm run clear  && npx jest test/Message.test.js",
     "build": "npm run clear  && rollup -c",
     "clear": "node -e 'console.clear()'"
   },
@@ -48,6 +48,7 @@
     "@semantic-ui-react/event-stack": "^3.1.1",
     "@stardust-ui/react-component-event-listener": "^0.40.0",
     "@stardust-ui/react-component-ref": "^0.40.0",
+    "@types/jest": "^26.0.7",
     "@types/lodash": "^4.14.158",
     "@types/node": "^14.0.26",
     "@types/react": "^16.9.43",
