--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "test": "jest",
-    "test:Image": "npm run clear  && npx jest test/Feed.test.js",
+    "test:Image": "npm run clear  && npx jest test/Rating.test.js",
     "build": "npm run clear  && rollup -c",
     "clear": "node -e 'console.clear()'"
   },
@@ -50,12 +50,12 @@
     "@stardust-ui/react-component-ref": "^0.40.0",
     "@types/jest": "^26.0.7",
     "@types/lodash": "^4.14.158",
-    "@types/node": "^14.0.26",
+    "@types/node": "^14.0.27",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
     "@types/react-is": "^16.7.1",
     "@types/shallowequal": "^1.1.1",
-    "@wessberg/rollup-plugin-ts": "^1.2.28",
+    "@wessberg/rollup-plugin-ts": "^1.2.34",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-react-handled-props": "^2.1.0",
     "classnames": "^2.2.6",
@@ -64,9 +64,9 @@
     "enzyme-shallow-equal": "^1.0.1",
     "eslint": "^7.5.0",
     "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-react": "^7.20.4",
+    "eslint-plugin-react": "^7.20.5",
     "faker": "^4.1.0",
-    "jest": "^26.1.0",
+    "jest": "^26.2.0",
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
     "lint-staged": "^10.2.11",
@@ -77,7 +77,7 @@
     "rollup": "^2.23.0",
     "rollup-plugin-progress": "^1.1.2",
     "semantic-ui-css": "^2.4.1",
-    "ts-jest": "^26.1.3",
+    "ts-jest": "^26.1.4",
     "tslint": "^6.1.2",
     "tslint-config-airbnb": "^5.11.2",
     "typescript": "^3.9.7"
